--- a/Index.html
+++ b/Index.html
@@ -6,9 +6,7 @@
   <link rel="shortcut icon" type="image/png" href="IMAGEURL"/> 
   <meta name="viewport" content="width=device-width, initial-scale=1"> 
   <body> 
-    <iframe src="https://jfairaes.wixsite.com/website" style="position:fixed; top:-49px; left:0px; bottom:0px; right:0px; width:100%; height:105%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;"> 
-  </iframe> 
-  </body> 
-  <script type="text/javascript"> 
-    <!-- if (screen.width <= 699) { document.location = "https://jfairaes.wixsite.com/website"; } //--> </script> 
+    <iframe src="https://jfairaes.wixsite.com/website" style="position:fixed; top:-50px; left:0px; bottom:0px; right:0px; width:100%; height:105%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;"> </iframe> </body> <script type="text/javascript"> 
+  <!-- if (screen.width <= 699) { document.location = "https://pedrothasilva.wixsite.com/main"; } //--> 
+  </script> 
 </html>
